--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "motion": "^12.23.24",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "sonner": "^2.0.7",
     "vite": "^6.2.0",
     "ws": "^8.19.0"
   },
